# dicom_viewer

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CMakeLists.txt  Doxyfile  README.kr.md  README.md  build.bat  build.ps1  build.sh  docker-compose.yml  setup.bat  setup.ps1  setup.sh  vcpkg.json
.ad-sdlc/config/: agents.yaml  project.yaml
.github/workflows/: ci.yml  pages.yml
benchmarks/: README.md
client/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
client/src/: App.tsx  main.tsx
client/src/api/: endpoints.ts  httpClient.ts  wsManager.ts
client/src/stores/: authStore.ts  flowStore.ts  measurementStore.ts  pacsStore.ts  segmentationStore.ts  sessionStore.ts  studyStore.ts  uiStore.ts  viewportStore.ts
client/src/types/: api.ts  models.ts  websocket.ts
config/: deployment.cloud.yaml  deployment.on-premise.yaml
docs/: ARCHITECTURE.kr.md  ARCHITECTURE.md  PRD.kr.md  PRD.md  SDS.kr.md  SDS.md  SRS.kr.md  SRS.md  _config.yml  index.md
docs/reference/: 01-itk-overview.kr.md  01-itk-overview.md  02-vtk-overview.kr.md  02-vtk-overview.md  03-itk-vtk-integration.kr.md  03-itk-vtk-integration.md  04-dicom-pipeline.kr.md  04-dicom-pipeline.md  05-pacs-integration.kr.md  05-pacs-integration.md  06-gui-framework-comparison.kr.md  06-gui-framework-comparison.md  07-remote-visualization.kr.md  07-remote-visualization.md  README.kr.md  README.md
include/core/: app_log_level.hpp  data_serializer.hpp  dicom_loader.hpp  hounsfield_converter.hpp  image_converter.hpp  logging.hpp  project_manager.hpp  series_builder.hpp  transfer_syntax_decoder.hpp  zip_archive.hpp
include/core/platform/: macos_math_fix.hpp
include/services/: audit_service.hpp  dicom_echo_scu.hpp  dicom_find_scu.hpp  dicom_move_scu.hpp  dicom_store_scp.hpp  dicomweb_service.hpp  hemodynamic_surface_manager.hpp  mpr_coordinate_transformer.hpp  mpr_renderer.hpp  pacs_config.hpp  pacs_config_manager.hpp  query_cache_manager.hpp  storage_commitment_service.hpp  surface_renderer.hpp  transfer_function_manager.hpp  volume_renderer.hpp
include/services/auth/: auth_provider.hpp  auth_provider_factory.hpp  ldap_auth_provider.hpp  oidc_auth_provider.hpp  rbac_middleware.hpp
include/services/cardiac/: calcium_scorer.hpp  cardiac_phase_detector.hpp  cardiac_types.hpp  cine_organizer.hpp  coronary_centerline_extractor.hpp  curved_planar_reformatter.hpp
include/services/config/: deployment_config.hpp
include/services/coordinate/: coordinate_types.hpp  mpr_coordinate_transformer.hpp
include/services/enhanced_dicom/: dimension_index_sorter.hpp  enhanced_dicom_parser.hpp  enhanced_dicom_types.hpp  frame_extractor.hpp  functional_group_parser.hpp  series_classifier.hpp
include/services/export/: data_exporter.hpp  dicom_sr_writer.hpp  ensight_exporter.hpp  export_types.hpp  matlab_exporter.hpp  measurement_serializer.hpp  mesh_exporter.hpp  report_generator.hpp  video_exporter.hpp
include/services/flow/: flow_dicom_parser.hpp  flow_dicom_types.hpp  flow_quantifier.hpp  flow_visualizer.hpp  phase_corrector.hpp  temporal_navigator.hpp  velocity_field_assembler.hpp  vessel_analyzer.hpp
include/services/measurement/: area_measurement_tool.hpp  linear_measurement_tool.hpp  measurement_types.hpp  roi_statistics.hpp  shape_analyzer.hpp  volume_calculator.hpp
include/ui/: display_3d_controller.hpp  dr_viewer.hpp  drop_handler.hpp  intro_page.hpp  main_window.hpp  mask_wizard_controller.hpp  mpr_view_widget.hpp  quantification_window.hpp  viewport_layout_manager.hpp  viewport_widget.hpp
server/: CMakeLists.txt  Dockerfile
server/nginx/: nginx.conf
server/src/: main.cpp
server/src/api/: api_server.cpp  api_server.hpp  auth_routes.cpp  auth_routes.hpp  cardiac_routes.cpp  cardiac_routes.hpp  export_routes.cpp  export_routes.hpp  flow_routes.cpp  flow_routes.hpp  health_routes.cpp  health_routes.hpp  jwt_middleware.hpp  measurement_routes.cpp  measurement_routes.hpp  pacs_routes.cpp  pacs_routes.hpp  render_routes.cpp  render_routes.hpp  route_helpers.hpp  segmentation_routes.cpp  segmentation_routes.hpp  session_routes.cpp  session_routes.hpp  study_routes.cpp  study_routes.hpp
src/app/: main.cpp
src/controller/: loading_controller.cpp  rendering_controller.cpp  tool_controller.cpp  viewer_controller.cpp
src/core/: data_serializer.cpp  project_manager.cpp  zip_archive.cpp
src/ui/: display_3d_controller.cpp  drop_handler.cpp  intro_page.cpp  main_window.cpp  mask_wizard_controller.cpp
tests/: CMakeLists.txt
tests/data/: download_sample_data.sh
tests/integration/: .env.test.example  cardiac_pipeline_integration_test.cpp  docker-compose.yml  flow_pipeline_integration_test.cpp  postgres_audit_sink_test.cpp  redis_session_store_test.cpp  test_series_loading.cpp  test_slice_ordering.cpp  websocket_multiplex_test.cpp
tests/test_utils/: benchmark_fixture.hpp  cardiac_phantom_generator.hpp  flow_phantom_generator.hpp  volume_generator.hpp
tests/unit/: adaptive_quality_controller_test.cpp  anisotropic_diffusion_filter_test.cpp  app_log_level_test.cpp  area_measurement_tool_test.cpp  asc_view_controller_test.cpp  audit_service_test.cpp  auth_provider_test.cpp  calcium_scorer_test.cpp  cardiac_phase_detector_test.cpp  centerline_tracer_test.cpp  charset_decoding_test.cpp  cine_organizer_test.cpp  concurrency_test.cpp  controller_undo_redo_test.cpp  coronary_centerline_extractor_test.cpp  data_exporter_test.cpp  data_serializer_test.cpp  deployment_config_test.cpp  dicom_echo_scu_test.cpp  dicom_find_scu_test.cpp  dicom_loader_test.cpp  dicom_move_scu_test.cpp  dicom_sr_writer_test.cpp  dicom_store_scp_test.cpp  dicomweb_service_test.cpp  dimension_index_sorter_test.cpp  dirty_region_tracker_test.cpp  display_3d_controller_test.cpp  dr_viewer_test.cpp  drop_handler_test.cpp  ellipse_roi_test.cpp  enhanced_dicom_parser_test.cpp  ensight_exporter_test.cpp  flow_dicom_parser_test.cpp  flow_graph_widget_test.cpp  flow_quantifier_test.cpp  flow_tool_panel_test.cpp  flow_visualizer_test.cpp  frame_encoder_test.cpp  frame_extractor_test.cpp  (+81 more)
(+215 files in other folders)
